--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>App</title>
   </head>
   <body>
     <div id="root"></div>
+    <!-- Vite remplace ça au build par /<repo-name>/assets/index-xxxx.js -->
     <script type="module" src="/src/main.tsx"></script>
-    <link href="/src/style.css" rel="stylesheet">
   </body>
 </html>
